<?xml version="1.0"?>
<package format="1">
  <name>ardumower</name>
  <version>0.0.0</version>
  <description>The ardumower package contains package for navigation and localization</description>

  <maintainer email="mujib.deutschland@gmail.com">mujib</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ardumower</url> -->

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>odom_ardumower</run_depend>
  <run_depend>imu_mpu_final</run_depend>
  <run_depend>imu</run_depend>
  <run_depend>ardu_base_pkg</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>driver_common</run_depend>
  <run_depend>rc_control_pkg</run_depend>
  <run_depend>timestamp_tools</run_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
